Fix sticky button hover on mobile

--- a/src/components/NavBar/styles.module.scss
+++ b/src/components/NavBar/styles.module.scss
@@ -20,7 +20,7 @@
   font-weight: 400;
   color: $mainTextColorWhite;
   background-color: $highlightTextColorPink;
-  box-shadow: 0 0 8px 0 $highlightTextColorPink
+  box-shadow: 0 0 4px 0 $mainTextColorBlack;
 }
 
 .navBar.isScrolled {
